# wafer-defect-pipeline

./: .dockerignore  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
configs/: config.yaml
configs/data/: default.yaml
configs/eval/: default.yaml
configs/model/: cm.yaml  ddim.yaml  ddpm.yaml
configs/serve/: default.yaml
configs/train/: default.yaml
docker/: Dockerfile.mlflow  Dockerfile.serve  Dockerfile.train  prometheus.yml
notebooks/: README.md
scripts/: README.md  run_eval_gate.py  run_generate.py  run_pipeline.py  run_train_cm.py  run_train_ddpm.py
tests/: test_quality_gate.py  test_registry.py  test_serve_api.py  test_serve_metrics.py  test_serve_schemas.py  test_serve_web.py  test_smoke.py
wafer_defect_pipeline/: __init__.py  runtime.py
wafer_defect_pipeline/data/: __init__.py  dataset.py  wm811k.py
wafer_defect_pipeline/eval/: __init__.py  fid.py  quality_gate.py
wafer_defect_pipeline/inference/: __init__.py  sampler.py
wafer_defect_pipeline/models/: __init__.py  cm.py  ddpm.py  unet.py
wafer_defect_pipeline/registry/: __init__.py  mlflow_registry.py
wafer_defect_pipeline/serve/: __init__.py  api.py  metrics.py  schemas.py  web.py
wafer_defect_pipeline/serve/templates/: base.html  generate.html  runs.html  versions.html
wafer_defect_pipeline/train/: __init__.py  trainer.py  trainer_cm.py
wafer_defect_pipeline/utils/: __init__.py  seed.py  viz.py
