[project]
name = "wafer-defect-pipeline"
version = "0.0.1"
description = "End-to-end pipeline for synthetic wafer defect generation on WM-811K (DDPM, DDIM, Consistency Models) with MLOps tooling"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Jung Woo-Je", email = "dnwpgmlfk@gmail.com" },
]
keywords = ["wafer", "defect", "synthesis", "diffusion", "wm811k", "ddpm", "ddim", "consistency-model", "mlops"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0",
    "torchvision>=0.15",
    "numpy>=1.23",
    "pandas>=2.0",
    "opencv-python>=4.6",
    "pillow>=9.0",
    "matplotlib>=3.6",
    "imageio>=2.30",
    "einops>=0.6",
    "tqdm>=4.65",
    "scipy>=1.10",
    "kagglehub>=0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "pre-commit>=3.5",
]
mlops = [
    "hydra-core>=1.3",
    "mlflow>=2.10",
]
serve = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "gradio>=4.0",
    "prometheus-client>=0.20",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["wafer_defect_pipeline*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
extend-select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
